syntax = "proto3";

service BankToBankService {
  rpc Greeting (GreetRequest) returns (GreetReply);
}
message GreetRequest {
	bool hi = 1;
}
message GreetReply {
	bool hi = 1;
}